Completed box, secretbox, scalarmult; complete tests working

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Wasm Testbed</title>
-	<script type="text/javascript" src='./dist/wasmCode.js'></script>
 	<script type="text/javascript" src='./src/nacl-fast.js'></script>
-	<script type="text/javascript" src='./src/index.js'></script>
+	<script type="text/javascript" src='./dist/nacl-wasm.js'></script>
+	<script type="text/javascript" src='./src/test.js'></script>
 </head>
 <body>
 </body>
